# serializer version: 1
# name: test_and_or_not_ok[expr_and_or_not]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__or_expr
                  ident	x
                  bigquery__and_expr
                    ident	y
                    bigquery__not_expr
                      ident	z
  
  '''
# ---
# name: test_and_or_not_ok[expr_and_or_not_parens]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__and_expr
                  bigquery__parenthesized_not_a_query_expr
                    bigquery__or_expr
                      ident	x
                      ident	y
                  bigquery__not_expr
                    ident	z
  
  '''
# ---
# name: test_between[expr_between]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__and_expr
                  bigquery__between_expr
                    ident	x
                    ident	a
                    ident	b
                  ident	c
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_column_expr_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__field_access_expr
                  bigquery__field_access_expr
                    ident	column1
                    ident	column2
                  ident	column3
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_column_expr_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__field_access_expr
                  ident	column1
                  ident	column2
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_table_expr_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__path_expression
                    bigquery__path_expression
                      ident	`project1`
                    ident	dataset1
                  ident	table1
  
  '''
# ---
# name: test_dotted_expr_ok[dotted_table_expr_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                ident	column1
          bigquery__select_from
            from_clause
              bigquery__from_item_table
                bigquery__path_expression
                  bigquery__path_expression
                    ident	dataset1
                  ident	table1
  
  '''
# ---
# name: test_function_call_ok[fcall_kitchen_sink]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__function_call_expr
                  ident	FUNC
                  bigquery__function_args
                    bigquery__pos_arg
                      bigquery__literal
                        integer_literal	1
                    bigquery__named_arg
                      ident	name2
                      bigquery__literal
                        integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_named_arg_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__function_call_expr
                  ident	FUNC
                  bigquery__function_args
                    bigquery__named_arg
                      ident	name1
                      bigquery__literal
                        integer_literal	1
                    bigquery__named_arg
                      ident	name2
                      bigquery__literal
                        integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_named_arg_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__function_call_expr
                  ident	FUNC
                  bigquery__function_args
                    bigquery__named_arg
                      ident	name1
                      bigquery__literal
                        integer_literal	1
  
  '''
# ---
# name: test_function_call_ok[fcall_path_expr]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__function_call_expr
                  bigquery__field_access_expr
                    ident	NET
                    ident	IPV4_FROM_INT64
                  bigquery__function_args
                    bigquery__pos_arg
                      bigquery__literal
                        integer_literal	42
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__function_call_expr
                  ident	FUNC
                  bigquery__function_args
                    bigquery__pos_arg
                      bigquery__literal
                        integer_literal	1
                    bigquery__pos_arg
                      bigquery__literal
                        integer_literal	2
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_none]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__function_call_expr
                  ident	FUNC
  
  '''
# ---
# name: test_function_call_ok[fcall_pos_arg_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__function_call_expr
                  ident	FUNC
                  bigquery__function_args
                    bigquery__pos_arg
                      bigquery__literal
                        integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_integer_literal_multi]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__subscript_expr
                  bigquery__subscript_expr
                    ident	column1
                    bigquery__literal
                      integer_literal	0
                  bigquery__literal
                    integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_integer_literal_single]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__subscript_expr
                  ident	column1
                  bigquery__literal
                    integer_literal	0
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_offset]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__subscript_expr
                  ident	column1
                  bigquery__function_call_expr
                    ident	OFFSET
                    bigquery__function_args
                      bigquery__pos_arg
                        bigquery__literal
                          integer_literal	2
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_path_expr_nested]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__subscript_expr
                  bigquery__subscript_expr
                    bigquery__field_access_expr
                      ident	column1
                      ident	column2
                    bigquery__literal
                      integer_literal	0
                  bigquery__literal
                    integer_literal	1
  
  '''
# ---
# name: test_subscript_expr_ok[subscript_expr_string_literal]
  '''
  start
    query_statement
      query_expr
        select
          select_list
            bigquery__select_item
              bigquery__select_expr
                bigquery__subscript_expr
                  ident	column1
                  bigquery__literal
                    bigquery__string_literal	'key1'
  
  '''
# ---
